# image_processor

./: AbstractFilter.h  CMakeLists.txt  Controller.cpp  Controller.h  Crop.cpp  Crop.h  EdgeDet.cpp  EdgeDet.h  Gaussian.cpp  Gaussian.h  GrayScale.cpp  GrayScale.h  Image.cpp  Image.h  MatrixFilter.cpp  MatrixFilter.h  MyFilter.cpp  MyFilter.h  Negative.cpp  Negative.h  Parser.cpp  Parser.h  Sharpenning.cpp  Sharpenning.h  image_processor.cpp
